openmediavault (1.7) stable; urgency=low

  * Mantis 0001221: Add basic support for Btrfs.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 12 Dec 2014 02:56:34 +0100

openmediavault (1.6) stable; urgency=low

  * Update locales.
  * Display plugins sorted by their XB-Plugin-Section value.
  * Set correct permissions for SSH authorized_keys files.
  * Mantis 0001213: SMB/CIFS guest permissions.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 08 Dec 2014 12:04:25 +0100

openmediavault (1.5) stable; urgency=low

  * Update locales.
  * Modify default grid column settings in S.M.A.R.T. dialog.
  * Prevent the deletion of the shared folders content if another shared
    folder also refers to it.
  * Mantis 0001211: Formatting larger than 16TB arrays. Additional mkfs
    command options for mdadm software RAID devices can be customized via
    the OMV_MKFS_EXTRAOPTIONS_EXT4_MDADM environment variable.
  * Introduce custom field XB-Plugin-Section in debian/control. The following
    values are supported: administration, backup, downloaders, filesystems,
    gaming, multimedia, network, remote, sharing, utilities, virtualization.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 30 Nov 2014 12:55:05 +0100

openmediavault (1.4) stable; urgency=low

  * Update locales.
  * Improve framework.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 30 Nov 2014 12:38:45 +0100

openmediavault (1.3) stable; urgency=low

  * Update locales.
  * Improve framework.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 27 Nov 2014 17:08:04 +0100

openmediavault (1.2) stable; urgency=low

  * Update locales.
  * Improve OMVHtmlPageAbstract::scanFiles() method to improve page
    loading speed.
  * Drop TCP wrapper support via WebGUI 'System | Network | Hosts' because
    this is no longer supported by most applications. Use iptables instead.
  * Mantis 0001194: Device "bonding_masters" does not exist.
